manifests/kafdrop/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kafdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafdrop
    spec:
      containers:
        - name: kafdrop
          image: docker.io/provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 100
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 0
