manifests/kafdrop/manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafdrop
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: kafdrop
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafdrop
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kafdrop
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kafdrop
    spec:
      automountServiceAccountToken: false
      containers:
        - env:
            - name: KAFKA_CLUSTERS_0_NAME
              value: local
            - name: KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS
              value: kafka:9092
            - name: LOGGING_LEVEL_ROOT
              value: info
            - name: LOGGING_LEVEL_COM_PROVECTUS
              value: info
          image: docker.io/provectuslabs/kafka-ui:latest
          imagePullPolicy: IfNotPresent
          name: kafdrop
          ports:
            - containerPort: 8080
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
          startupProbe:
            failureThreshold: 100
            httpGet:
              path: /actuator/health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 1
            successThreshold: 1
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsUser: 1000
      terminationGracePeriodSeconds: 0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafdrop
spec:
  rules:
    - host: kafdrop.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: kafdrop
                port:
                  name: http
            path: /
            pathType: Prefix
